wee bit of design improvements at the race pages

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -135,11 +135,13 @@
                         </SupplierDisplay>
                     </MudTd>
                     <MudTd>
-                        <MudLink OnClick="@(async () => await HandleTyrePicker(context.ResultId))">
-                            <TyreElement Colour="@context.Tyre.Colour">
-                                @context.Tyre.Name.ElementAt(0)
-                            </TyreElement>
-                        </MudLink>
+                        <div class="d-flex flex-row justify-center">
+                            <MudLink OnClick="@(async () => await HandleTyrePicker(context.ResultId))">
+                                <TyreElement Colour="@context.Tyre.Colour">
+                                    @context.Tyre.Name.ElementAt(0)
+                                </TyreElement>
+                            </MudLink>
+                        </div>
                     </MudTd>
                 </RowTemplate>
             </MudTable>
