--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -33,6 +33,11 @@
     src: url('../fonts/Shoguns Clan.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: "RoadRage";
+    src: url('../fonts/Road_Rage.otf') format('opentype');
+}
+
 /*
     root
     shared
@@ -596,7 +601,7 @@ th {
         content: "An error has occurred."
     }
 
-/* special stuff */
+/* special */
 .cubic-repeat-bg {
     background: url('../images/mmmotif.svg') repeat;
 }
@@ -604,4 +609,8 @@ th {
 .header-special {
     font-family: ShogunsClan !important;
     font-size: 3em;
+}
+
+.font-roadrage {
+    font-family: RoadRage !important;
 }
