--- a/SimTECH/SimTECH/Pages/RaceWeek/Components/SignalNote.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Components/SignalNote.razor
@@ -1,11 +1,77 @@
 ﻿<MudPaper Class="absolute overflow-visible" Style="@_styles">
-    <SignalIcon Signal="@Signal" Size="@Size" />
+    <MudIcon Icon="@_signalIcon"
+             Size="@Size"
+             Color="@_signalColour" />
 </MudPaper>
 
 @code {
-    [Parameter] public double LapPercentage { get; set; }
-    [Parameter] public string Signal { get; set; }
-    [Parameter] public Size Size { get; set; } = Size.Small;
+    [Parameter]
+    public double LapPercentage { get; set; }
+
+    [Obsolete("Ew")]
+    [Parameter]
+    public string OldSignal { get; set; }
+
+    [Parameter]
+    public RacerEvent? Signal { get; set; }
+
+    [Parameter]
+    public Size Size { get; set; } = Size.Small;
+
+    // We might want to make the following common somewhere
+    private string _signalIcon
+    {
+        get
+        {
+            switch (OldSignal)
+            {
+                case "DriverDnf":
+                    return IconCollection.HelmetOff;
+                case "CarDnf":
+                    return IconCollection.CarCrash;
+                case "EngineDnf":
+                    return IconCollection.EngineOff;
+                case "Mistake":
+                    return Icons.Material.Filled.ErrorOutline;
+                case "Pitstop":
+                    return IconCollection.RefreshDot;
+                case "Swap":
+                    return Icons.Material.Filled.SwapVert;
+                case "Caution":
+                    return IconCollection.AlertTriangle;
+                case "Death":
+                    return Icons.Material.Filled.Healing;
+                default:
+                    return Icons.Material.Filled.QuestionMark;
+            }
+        }
+    }
+
+    // We might want to make the following common somewhere
+    private Color _signalColour
+    {
+        get
+        {
+            switch (OldSignal)
+            {
+                case "DriverDnf":
+                case "CarDnf":
+                case "EngineDnf":
+                    return Color.Error;
+                case "Mistake":
+                case "Caution":
+                    return Color.Warning;
+                case "Pitstop":
+                    return Color.Success;
+                case "Swap":
+                    return Color.Info;
+                case "Death":
+                    return Color.Inherit;
+                default:
+                    return Color.Warning;
+            }
+        }
+    }
 
     private string _styles
     {
@@ -15,7 +81,7 @@
 
             styles += "; line-height:0; background-color:var(--mud-palette-surface)";
 
-            if (Signal == "Death")
+            if (OldSignal == "Death")
                 styles += "; color: white";
 
             return styles;
