--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -45,6 +45,7 @@
     controls
     text
     inputs
+    icons
     tables
     dialogs
     graphics
@@ -458,6 +459,12 @@ th {
         border-radius: 8px;
         width: inherit;
     }
+
+/* icons */
+.signal-icon {
+    line-height: 0;
+    background-color: var(--mud-palette-surface);
+}
 
 /* tables */
 .accent-cell {
