--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
@@ -4,26 +4,35 @@
     <div id="practice-table">
         @if (!loading)
         {
-            <CommonSession Drivers="@practiceDrivers"
-                           AmountRuns="@amountRuns"
-                           HighestScore="@highestScore"
-                           LowestScore="@lowestScore"
-                           HasRaceClasses="@hasRaceClasses">
-                <CountryFlag Code="@raceCountry" />
-                <MudText Typo="Typo.h5">@raceName</MudText>
+            @if (practiceDrivers.Count == 0)
+            {
+                <div class="empty-page-container">
+                    <MudText>No practice data found</MudText>
+                </div>
+            }
+            else
+            {
+                <CommonSession Drivers="@practiceDrivers"
+                               AmountRuns="@amountRuns"
+                               HighestScore="@highestScore"
+                               LowestScore="@lowestScore"
+                               HasRaceClasses="@hasRaceClasses">
+                    <CountryFlag Code="@raceCountry" />
+                    <MudText Typo="Typo.h5">@raceName</MudText>
 
-                <MudSpacer />
+                    <MudSpacer />
 
-                <MudButtonGroup Variant="Variant.Text" Color="Color.Tertiary">
-                    <ScreenshotIconButton TargetId="practice-table" Colour="Color.Tertiary" Class="btn-sm" />
-                    @if (PracticeSession.IsFinished == false && advancedRuns != amountRuns)
-                    {
-                        <MudTooltip Text="Advance to next run" Placement="Placement.Top" Color="Color.Tertiary">
-                            <MudIconButton Icon="@IconCollection.ChevronsRight" OnClick="Advance" Class="btn-sm" />
-                        </MudTooltip>
-                    }
-                </MudButtonGroup>
-            </CommonSession>
+                    <MudButtonGroup Variant="Variant.Text" Color="Color.Tertiary">
+                        <ScreenshotIconButton TargetId="practice-table" Colour="Color.Tertiary" Class="btn-sm" />
+                        @if (PracticeSession.IsFinished == false && advancedRuns != amountRuns)
+                        {
+                            <MudTooltip Text="Advance to next run" Placement="Placement.Top" Color="Color.Tertiary">
+                                <MudIconButton Icon="@IconCollection.ChevronsRight" OnClick="Advance" Class="btn-sm" />
+                            </MudTooltip>
+                        }
+                    </MudButtonGroup>
+                </CommonSession>
+            }
         }
     </div>
 </MudContainer>
