--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -47,6 +47,7 @@
     inputs
     icons
     tables
+    pages & containers
     dialogs
     graphics
     extensions mudblazor css vars
@@ -514,6 +515,16 @@ th {
 .tyre-col {
     width: 105px;
     padding: 4px;
+}
+
+/* pages & containers */
+.empty-page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
 /* dialogs */
