--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
@@ -81,18 +81,18 @@
                             <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
                                 @if (ranDevelop)
                                 {
-                                    <MudTooltip Text="Save development" Placement="Placement.Top" Color="Color.Tertiary">
-                                        <MudIconButton Icon="@Icons.Material.Filled.Save"
-                                                       OnClick="SaveDevelopment"
-                                                       Class="btn-sm" />
-                                    </MudTooltip>
+                                    <MudButton StartIcon="@Icons.Material.Filled.Save"
+                                               IconSize="Size.Small"
+                                               OnClick="SaveDevelopment"
+                                               Class="btn-md">Save</MudButton>
                                 }
-                                <MudTooltip Text="Run development" Placement="Placement.Top" Color="Color.Tertiary">
-                                    <MudIconButton Icon="@Icons.Material.Filled.Recycling"
-                                                   OnClick="RunDevelop"
-                                                   Class="btn-sm" />
-                                </MudTooltip>
-                                <ScreenshotIconButton TargetId="development-results" Class="btn-sm" />
+                                <MudButton StartIcon="@Icons.Material.Filled.Recycling"
+                                           IconSize="Size.Small"
+                                           OnClick="RunDevelop"
+                                           Class="btn-md">Run</MudButton>
+                                <ScreenshotButton TargetId="development-results"
+                                                  IconSize="Size.Small"
+                                                  Class="btn-md" />
                             </MudButtonGroup>
                         </DevelopEntrant>
                     </MudPaper>
