--- a/SimTECH/SimTECH/Shared/Components/ScreenshotButton.razor
+++ b/SimTECH/SimTECH/Shared/Components/ScreenshotButton.razor
@@ -3,6 +3,7 @@
 <MudButton Variant="Variant.Outlined"
            Color="@Colour"
            StartIcon="@Icons.Material.Filled.Image"
+           IconSize="@IconSize"
            FullWidth="@FullWidth"
            Disabled="@IsDisabled"
            OnClick="TakeScreenshot"
@@ -14,6 +15,7 @@
 @code {
     [Parameter, EditorRequired] public string TargetId { get; set; }
     [Parameter] public Color Colour { get; set; } = Color.Inherit;
+    [Parameter] public Size IconSize { get; set; } = Size.Medium;
     [Parameter] public bool FullWidth { get; set; } = false;
     [Parameter] public string Class { get; set; } = string.Empty;
     [Parameter] public string Styles { get; set; } = string.Empty;
